added logic to view pixel changes in the dom for blur and spacing

--- a/index-START.html
+++ b/index-START.html
@@ -57,8 +57,11 @@
 
   <script>
 const imputs = document.querySelectorAll('.controls imput');
+
 function handleUpdate(){
-  console.log(this.value);
+  const suffix = this.dataset.sizing || '';
+  document.documentElement.style.setProperty(`--${this.name}`, this.value + suffix);
+  
 }
 
 imputs.forEach(input => input.addEventListener('change', hadleUpdate));
